<?xml version="1.0"?>
<package format="2">
  <name>cartesian_controller_tests</name>
  <version>0.0.0</version>
  <description>Integration tests for the Cartesian controllers</description>

  <maintainer email="scherzin@fzi.de">scherzin</maintainer>
  <license>BSD-3-Clause</license>
  <author email="scherzin@fzi.de">Stefan Scherzinger</author> 

  <!-- Use test_depend for packages you need only for testing: -->
  <test_depend>rostest</test_depend>
  <test_depend>rospy</test_depend> 
  <test_depend>cartesian_force_controller</test_depend> 
  <test_depend>cartesian_motion_controller</test_depend> 
  <test_depend>cartesian_compliance_controller</test_depend> 
  <test_depend>cartesian_controller_handles</test_depend> 
  <test_depend>cartesian_controller_examples</test_depend> 

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
