<package>
  <name>cartesian_controllers</name>
  <version>0.1.0</version>
  <description>Library of Cartesian ros controllers</description>

  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>

  <license>TODO</license>

  <url type="repository">git@ids-git.fzi.de:scherzin/cartesian_controllers.git</url>

  <author>Stefan Scherzinger</author>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>cartesian_controller_base</run_depend>
  <run_depend>cartesian_motion_controller</run_depend>
  <run_depend>cartesian_compliance_controller</run_depend>
  <run_depend>cartesian_force_controller</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
